feat: update title, netlify config

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
-  <link rel="apple-touch-icon" sizes="196x196" href="%PUBLIC_URL%/images/196x196_App_Icon.png" />
-  <link rel="apple-touch-icon" sizes="512x512" href="%PUBLIC_URL%/images/512x512_App_Icon.png" />
+  <!-- <link rel="apple-touch-icon" sizes="196x196" href="%PUBLIC_URL%/images/196x196_App_Icon.png" />
+  <link rel="apple-touch-icon" sizes="512x512" href="%PUBLIC_URL%/images/512x512_App_Icon.png" /> -->
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#7869CC" />
@@ -32,7 +32,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-<title>title</title>
+<title>Clique</title>
 </head>
 
 <body>
