feat: update title

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-<title>Clique</title>
+<title>Clique V2</title>
 </head>
 
 <body>
