--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,12 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@500;600&display=swap"
     rel="stylesheet">
   <!-- <link href="css/font.css" type="text/css" rel="stylesheet" /> -->
-</head>
-<!--
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-<!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -35,7 +34,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-<title>Clique V2</title>
+  <title>Clique V2</title>
+  <meta name="keywords" content="Clique, myClique, DAO, web3, governance" />
 </head>
 
 <body>
