--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,11 @@
 
   <title>Clique V2</title>
   <meta name="keywords" content="Clique, myClique, DAO, web3, governance" />
+  <style>
+    .ql-snow .ql-editor img {
+      max-width: 50% !important;
+    }
+  </style>
 </head>
 
 <body>
