fix: fix select, editor img, Activity network

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
   <title>Clique V2</title>
   <meta name="keywords" content="Clique, myClique, DAO, web3, governance" />
   <style>
-    .ql-snow .ql-editor img {
+    .ql-editor img {
       max-width: 50% !important;
     }
   </style>
