style: update mobile style

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#7869CC" />
-  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.myclique.io/ http://*.myclique.io/ https://www.googletagmanager.com https://www.google-analytics.com;
-     frame-src 'self'; frame-ancestors 'self'; child-src 'self'; img-src 'self' http://*.myclique.io/
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.myclique.io/ https://*.myclique.io/ https://www.googletagmanager.com https://www.google-analytics.com;
+     frame-src 'self'; frame-ancestors 'self'; child-src 'self'; img-src 'self' https://*.myclique.io/
      https://*.myclique.io/ https://assets.coingecko.com/ https://registry.walletconnect.org/ data: ;" />
-  <meta name=" fortmatic-site-verification" content="j93LgcVZk79qcgyo" />
+  <meta name="fortmatic-site-verification" content="j93LgcVZk79qcgyo" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -40,6 +40,7 @@
     .ql-editor img {
       max-width: 50% !important;
     }
+
   </style>
 </head>
 
