--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#7869CC" />
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.myclique.io/ https://*.myclique.io/ https://www.googletagmanager.com https://www.google-analytics.com;
-     frame-src 'self'; frame-ancestors 'self'; child-src 'self'; img-src 'self' https://*.myclique.io/
-     https://*.myclique.io/ https://assets.coingecko.com/ https://registry.walletconnect.org/ data: ;" />
+     frame-src 'self'; frame-ancestors 'self'; child-src 'self';" />
   <meta name="fortmatic-site-verification" content="j93LgcVZk79qcgyo" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
